--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,9 +5,10 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:padding="16dp"
     tools:context=".MainActivity">
 
-    <LinearLayout
+    <RelativeLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -16,24 +17,43 @@
 
         <TextView
             android:id="@+id/tvNivelAgua"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Nivel de agua: 0%"
+            android:text="Nivel de agua: --%"
+            android:layout_centerHorizontal="true"
+            android:layout_centerVertical="true"
             android:textSize="18sp"
             android:gravity="center"
-            android:padding="16dp" />
-
+            android:padding="16dp"
+            android:textStyle="bold"/>
+        <TextView
+            android:id="@+id/statusTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Estado: ---"
+            android:textSize="16sp"
+            android:textColor="#666666"
+            android:layout_below="@id/tvNivelAgua"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="16dp"
+            android:gravity="center" />
         <Button
             android:id="@+id/btnEncenderBomba"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Encender Bomba" />
+            android:text="Encender Bomba"
+            android:layout_below="@id/statusTextView"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="32dp" />
 
         <Button
             android:id="@+id/btnApagarBomba"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Apagar Bomba" />
+            android:text="Apagar Bomba"
+            android:layout_below="@id/btnEncenderBomba"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="16dp"/>
 
-    </LinearLayout>
+    </RelativeLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
