--- a/NivelAguaK/app/src/main/res/layout/activity_main.xml
+++ b/NivelAguaK/app/src/main/res/layout/activity_main.xml
@@ -11,7 +11,7 @@
         android:layout_height="wrap_content"
         android:text="Estanque: --%"
         android:textSize="24sp"
-        android:textColor="#000000"
+        android:textColor="#8045E9"
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
         android:gravity="center"
@@ -24,7 +24,7 @@
         android:layout_height="wrap_content"
         android:text="Estado: ---"
         android:textSize="16sp"
-        android:textColor="#666666"
+        android:textColor="#B410D0"
         android:layout_below="@id/tvNivelAgua"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="16dp"
